fix alignments and font

--- a/app/assets/stylesheets/stgcc.css
+++ b/app/assets/stylesheets/stgcc.css
@@ -490,11 +490,11 @@ li {
 	display: block;
     position: relative;
     margin: 100px auto;
+    margin-left: 15px;
+    margin-bottom: -32px;
     width: 190px;
     height: 110px;
     float: left;
-    margin-left: 15px;
-    margin-bottom: -32px;
     z-index: 1;
     /* Text styling */
     line-height: 150%;
@@ -508,12 +508,12 @@ li {
     cursor: pointer;
     transition: color 500ms ease, text-shadow 500ms ease;
     filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-    filter: grayscale(100%);
-    -moz-filter: grayscale(100%);
-    -ms-filter: grayscale(100%);
-    -o-filter: grayscale(100%);
+    filter: grayscale(0%);
+    -moz-filter: grayscale(0%);
+    -ms-filter: grayscale(0%);
+    -o-filter: grayscale(0%);
     filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
 
 .hex:hover,
@@ -521,21 +521,21 @@ li {
 .hex:active {
     color: #fff;
     color: rgba(255,255,255,1);
-    font-weight: 700;
+    font-weight: 500;
     text-shadow: 0 0 5px #000000;
     -webkit-box-shadow: 0px 0px 5px #448ccb;
   	-moz-box-shadow: 0px 0px 5px #448ccb;
   	box-shadow: 0px 0px 5px #448ccb;
    -webkit-text-fill-color: white; /* Will override color (regardless of order) */
    -webkit-text-stroke-width: 1px;
-   -webkit-text-stroke-color: #e1e1e1;
-  	filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
-    filter: grayscale(0%);
-    -moz-filter: grayscale(0%);
-    -ms-filter: grayscale(0%);
-    -o-filter: grayscale(0%);
+   -webkit-text-stroke-color: #d3d3d3;
+    filter: url("data:image/svg+xml;utf8,<svg xmlns=\'http://www.w3.org/2000/svg\'><filter id=\'grayscale\'><feColorMatrix type=\'matrix\' values=\'0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0.3333 0.3333 0.3333 0 0 0 0 0 1 0\'/></filter></svg>#grayscale"); /* Firefox 10+, Firefox on Android */
+    filter: grayscale(100%);
+    -moz-filter: grayscale(100%);
+    -ms-filter: grayscale(100%);
+    -o-filter: grayscale(100%);
     filter: gray; /* IE6-9 */
-    -webkit-filter: grayscale(0%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
+    -webkit-filter: grayscale(100%); /* Chrome 19+, Safari 6+, Safari 6+ iOS */
 }
 
 .hex-row {
@@ -786,15 +786,19 @@ li {
 	.container {
 		padding: 0;
 	}
-	.hex-wrapper {
-		padding-left: 3px;
-	}
 	.hex {
 	    width: 145px;
 	    height: 145px;
-	    margin-left: 3px;
+	    margin-left: 5px;
 	}
 	#joker, #funkotj, #tbsimperial, #messi, #fpcolumpio, #glassdoraemon, #funkomt, #funkonana, #danboardmak, #acgtiger, #starburn {
-		margin-left: 0px;
+		margin-left: 5px;
 	}
+    #hottoys, #funko, #hasbro, #danboard, #zcwo, #pak, #acgtoys, #damtoys, #fansproject, #toynami {
+        display: none;
+    }
+    p {
+        padding: 0px 2px;
+        margin-top: -15px;
+    }
 }
